styles/globals.css
@import url("https://cdn.jsdelivr.net/gh/wanteddev/wanted-sans@v1.0.1/packages/wanted-sans/fonts/webfonts/static/split/WantedSans.min.css");

@font-face {
  font-family: 'OAGothic-ExtraBold';
  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.0/OAGothic-ExtraBold.woff2') format('woff2');
  font-weight: 800;
  font-style: normal;
}

:root {
  --max-width: 1100px;
  --border-radius: 12px;

  --foreground-rgb: 255, 255, 255;
  --background-start-rgb: 0, 0, 0;
  --background-end-rgb: 0, 0, 0;

  --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
  --secondary-glow: linear-gradient(to bottom right,
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0.3));

  --tile-start-rgb: 2, 13, 46;
  --tile-end-rgb: 2, 5, 19;
  --tile-border: conic-gradient(#ffffff80,
      #ffffff40,
      #ffffff30,
      #ffffff20,
      #ffffff10,
      #ffffff10,
      #ffffff80);

  --callout-rgb: 20, 20, 20;
  --callout-border-rgb: 108, 108, 108;
  --card-rgb: 100, 100, 100;
  --card-border-rgb: 200, 200, 200;
  --md-sys-color-background: #101412;
  --md-sys-color-on-background: #e0e3df;
  --md-sys-color-surface: #101412;
  --md-sys-color-surface-dim: #101412;
  --md-sys-color-surface-bright: #363a37;
  --md-sys-color-surface-container-lowest: #0b0f0d;
  --md-sys-color-surface-container-low: #181c1a;
  --md-sys-color-surface-container: #1c201e;
  --md-sys-color-surface-container-high: #272b28;
  --md-sys-color-surface-container-highest: #323633;
  --md-sys-color-on-surface: #e0e3df;
  --md-sys-color-surface-variant: #3f4943;
  --md-sys-color-on-surface-variant: #bfc9c1;
  --md-sys-color-inverse-surface: #e0e3df;
  --md-sys-color-inverse-on-surface: #2d312e;
  --md-sys-color-outline: #89938c;
  --md-sys-color-outline-variant: #3f4943;
  --md-sys-color-shadow: #000000;
  --md-sys-color-scrim: #000000;
  --md-sys-color-surface-tint: #8cd6b0;
  --md-sys-color-primary: #8cd6b0;
  --md-sys-color-on-primary: #003825;
  --md-sys-color-primary-container: #004e34;
  --md-sys-color-on-primary-container: #a0eac4;
  --md-sys-color-inverse-primary: #1e6b4c;
  --md-sys-color-secondary: #b0cdbb;
  --md-sys-color-on-secondary: #1c3529;
  --md-sys-color-secondary-container: #2b4537;
  --md-sys-color-on-secondary-container: #bddbc9;
  --md-sys-color-tertiary: #c5c0ff;
  --md-sys-color-on-tertiary: #2d2961;
  --md-sys-color-tertiary-container: #403c75;
  --md-sys-color-on-tertiary-container: #dad6ff;
  --md-sys-color-error: #ffb4ab;
  --md-sys-color-on-error: #690005;
  --md-sys-color-error-container: #93000a;
  --md-sys-color-on-error-container: #ffdad6;
  --color-background: #1f1f1f;
  --color-design: #FF906C;
  --color-research: #EC75FF;
  --radius: 340px;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font-family: "Wanted Sans", -apple-system, BlinkMacSystemFont, system-ui, "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-use-select: none;
  user-select: none;
  outline: none;
  -webkit-tap-highlight-color: transparent;
  -ms-overflow-style: none;
}

::-webkit-scrollbar {
  display: none;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

svg {
  position: relative;
  top: 3px;
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(to bottom,
      transparent,
      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

main {
  padding: 1rem 0.8rem;
  padding-bottom: 150px
}

.settings .station-item {
  margin-left: -15px;
  margin-right: -15px;
  padding: 0.2rem 1rem;
  justify-content: start;
  gap: 10px;
  align-items: start;
  text-decoration: dotted;
}

.station-item {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  padding: 1rem;
  border-radius: 15px;
  transition: all 0.2s ease-in-out;
  z-index: 0;
}

.station-item:active {
  background-color: #1f1f1f;
  transform: scale(0.98);
}

.station-item.active {
  color: #4cffba;
}

.badge {
  width: fit-content;
  height: 30px;
  border-radius: 20px;
  padding: 2px 5px;
  font-size: .8em;
  background-color: #4cffba;
  color: #000;
  position: relative;
  top: -1px;
  z-index: -1;
}

.player-header {
  display: flex;
  justify-content: space-between;
  width: 100%;
  align-items: center;
  padding: 1.5em;
  height: 60px;
  position: fixed;
  top: 0;
  z-index: 999;
}

.bottom-sheet-handle {
  width: 60px;
  height: 8px;
  background-color: #ffffff50;
  border-radius: 10px;
  position: absolute;
  top: 10px;
  left: 50%;
  transform: translateX(-50%);
}

.sidebar-player-handle {
  position: absolute;
  width: 100%;
  top: 0;
  text-align: center;
  font-size: 1.8rem;
  opacity: 0.5;
  z-index: 9999;
}

.player-header-title {
  font-size: 1rem;
  font-weight: bold;
  width: 100%;
}

.player-header-title.open {
  margin-top: 25px;
  text-align: center;
}

.player-header-close {
  cursor: pointer;
  font-size: 22px;
  color: rgb(var(--foreground-rgb));
}

.loader {
  width: 25px;
  height: 25px;
  border: 4px solid #2b2b2b;
  border-top: 4px solid #4cffba;
  border-radius: 50%;
  animation: spin 1s infinite linear;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.player-body {
  padding: 2rem;
  position: fixed;
  bottom: 60px;
  z-index: 999;
  overflow: hidden;
  width: 100%;
}

.player-body-title {
  font-size: 2rem;
  font-weight: bold;
  margin-bottom: 10px;
  font-family: "OAGothic-ExtraBold", -apple-system, BlinkMacSystemFont, system-ui, "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;

}

.player-playpause-btn {
  width: 45px;
  height: 45px;
  border-radius: 15px;
  background-color: #ffffff2f;
  cursor: pointer;
  font-size: 1.5rem;
  transition: all 0.2s ease-in-out;
  color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
}

.player-playpause-btn:active {
  transform: scale(0.95);
}

.player-heart-btn {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-color: #ffffff1c;
  cursor: pointer;
  font-size: 1.3rem;
  transition: all 0.2s ease-in-out;
  float: right;
  color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
}

.player-heart-btn:active {
  transform: scale(0.95);
}

.player-heart-btn.active {
  color: #ce3838;
}

.player-body svg {
  top: 0px;
}

.bottom-nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 60px;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  z-index: 9999;
  background-color: #1f1f1f;
  box-sizing: border-box;
  font-size: 1.5rem;
  border-radius: 15px 15px 0 0;
}

.bottom-nav .item {
  transition: all 0.2s ease-in-out;
}

.bottom-nav .item:active {
  transform: scale(0.9);
}

.bottom-nav .item.active {
  color: #4cffba;
}

header {
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  padding: 1rem;
  padding-bottom: 0;
  background-color: #000;
}

.kakao_ad_area {
  border-radius: 15px;
  margin-left: 15px;
  margin-right: 15px;
  box-sizing: border-box;
  max-width: calc(100dvw - 50px);
}

.kakao_ad_area iframe {
  border-radius: 10px;
}

.region-select {
  display: flex;
  align-items: center;
  width: 100%;
  height: 60px;
  box-sizing: border-box;
  font-size: 1.5rem;
  overflow-x: scroll;
  white-space: nowrap;
  margin: 0 0.8rem;
  gap: 5px;
}

.region-select button,
.station-item button {
  cursor: pointer;
  background-color: transparent;
  border: none;
  color: rgb(var(--foreground-rgb));
  font-size: 1.2rem;
  font-weight: 300;
  transition: all 0.2s ease-in-out;
  width: max-content;
  opacity: 0.5;
}

.station-item button {
  width: 30px;
  height: 30px;
  z-index: -1;
}

.region-select button.active {
  border-bottom: 2px solid #4cffba;
  opacity: 1;
}


.circles {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  animation-name: rotate;
  animation-duration: 25s;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  backface-visibility: hidden;
  perspective: 1000;
}

.circle {
  position: fixed;
  bottom: 0;
  width: 1px;
  height: 1px;
  margin: calc(var(--radius) / 2);
  border-radius: 50%;
  backface-visibility: hidden;
  perspective: 1000;
  opacity: .5;
}

.circle.design {
  background: var(--color-design);
  box-shadow: 0 0 var(--radius) var(--radius) var(--color-design);
  animation-name: float;
  animation-duration: 6s;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

.circle.research {
  background: var(--color-research);
  box-shadow: 0 0 var(--radius) var(--radius) var(--color-research);
  animation-name: float;
  animation-duration: 8s;
  animation-iteration-count: infinite;
  animation-direction: alternate-reverse;
}

@keyframes float {
  0% {
    transform: translateX(calc(var(--radius) * 0.0)) translateZ(0)
  }

  20% {
    transform: translateX(calc(var(--radius) * 0.5)) translateZ(0)
  }

  40% {
    transform: translateX(calc(var(--radius) * 1.0)) translateZ(0)
  }

  60% {
    transform: translateX(calc(var(--radius) * 1.5)) translateZ(0)
  }

  80% {
    transform: translateX(calc(var(--radius) * 0.5)) translateZ(0)
  }

  100% {
    transform: translateX(calc(var(--radius) * 0.0)) translateZ(0)
  }
}

@keyframes rotate {
  0% {
    transform: rotate(0deg) translateZ(0)
  }

  100% {
    transform: rotate(360deg) translateZ(0)
  }
}

.timer-modal-backdrop {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: #00000080;
  backdrop-filter: blur(10px);
  z-index: 9999;
  display: flex;
  justify-content: center;
  align-items: center;
}

.timer-modal {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  background-color: #1f1f1f;
  border-radius: 20px 20px 0 0;
  padding: 1rem;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  z-index: 10000;
  padding: 20px;
}

.timer-modal button {
  width: 100%;
  padding: 1rem;
  border-radius: 15px;
  background-color: #ffffff2f;
  cursor: pointer;
  font-size: 1rem;
  transition: all 0.2s ease-in-out;
  color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  border: none;
  font-weight: 500;
}

.timer-modal button:active {
  transform: scale(0.95);
}

.timer-modal button.primary {
  background-color: #4cffbae1;
  color: #000000;
}

.select-container {
  position: relative;
}

select {
  width: 50px;
  font-size: 2rem;
  border: none;
  background-color: transparent;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
}

.select-container select {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: none;
}

select option {
  background-color: #1f1f1f;
  color: #fff;
  font-size: 1rem;
}

